# GrassClaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
.github/workflows/: ci.yml  tauri-desktop.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/web/: index.html  manifest.webmanifest  service-worker.js
apps/web/src/: main.js  style.css
docs/: github-publish.md  platform-strategy.md  release-checklist.md
scripts/: build-web.mjs  dev-server.mjs
