[package]
name = "grassclaw_app"
version = "1.0.0-beta.1"
edition = "2021"
description = "GrassClaw cross-platform shell"
license = "MIT"
authors = ["张超宇"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
